# lernkit

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  lernkit.config.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  deploy-website.yml  secret-scan.yml
apps/api/: README.md  pyproject.toml
apps/api/src/lernkit_api/: __init__.py  config.py  health.py  main.py  version.py
apps/api/tests/: conftest.py  test_health.py
apps/docs/: astro.config.mjs  package.json  tsconfig.json
apps/website/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
docs/adr/: 0001-use-madr-for-architecture-decisions.md  0002-adopt-astro-starlight-mdx-react-islands.md  0003-prioritize-cmi5-and-scorm-1-2-with-2004-opt-in.md  0004-unified-tracker-interface-with-pluggable-adapters.md  0005-scorm-again-as-primary-lms-api-wrapper.md  0006-pyodide-in-web-worker-for-in-browser-python.md  0007-sandpack-for-browser-js-demos-not-webcontainers.md  0008-server-side-code-execution-fastapi-docker-gvisor.md  0009-reuse-rf-mcp-as-robot-framework-runner-base.md  0010-codemirror-6-as-primary-editor.md  0011-paged-js-playwright-for-pdf-export.md  0012-keystatic-as-primary-ui-authoring-layer.md  0013-yet-analytics-sql-lrs-for-self-hosted-learning-record-store.md  0014-mit-license-for-framework-core.md  0015-one-source-many-outputs-build-pipeline.md  0016-embed-h5p-via-h5p-standalone-for-long-tail-content.md  0017-test-framework-itself-with-robot-framework.md  0021-self-host-first-infrastructure-principle.md  (+7 more)
infra/: docker-compose.yml
(+128 files in other folders)
